@startuml MyProperty Database Schema

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>

hide methods
hide stereotypes

skinparam class {
    BackgroundColor White
    ArrowColor #2B2D42
    BorderColor #2B2D42
}

table(users) {
    primary_key(id) UUID
    email VARCHAR(255)
    password_hash VARCHAR(255)
    role VARCHAR(50)
    full_name VARCHAR(255)
    phone VARCHAR(50)
}

table(properties) {
    primary_key(id) UUID
    foreign_key(owner_id) UUID
    title VARCHAR(255)
    description TEXT
    price DECIMAL
    address TEXT
    bedrooms INTEGER
    bathrooms INTEGER
    area_sqft DECIMAL
    property_type VARCHAR(50)
    status VARCHAR(20)
}

table(property_images) {
    primary_key(id) UUID
    foreign_key(property_id) UUID
    image_url TEXT
    is_primary BOOLEAN
}

table(contact_messages) {
    primary_key(id) UUID
    foreign_key(property_id) UUID
    foreign_key(sender_id) UUID
    foreign_key(receiver_id) UUID
    message TEXT
}

users "1" -- "*" properties : owns >
properties "1" -- "*" property_images : has >
properties "1" -- "*" contact_messages : about >
users "1" -- "*" contact_messages : sends >
users "1" -- "*" contact_messages : receives >

note bottom of users
  role can be:
  - landlord
  - agent
  - renter
  - admin
end note

note bottom of properties
  status can be:
  - pending
  - approved
  - rejected
end note

@enduml
